# 3d-model-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
{{cookiecutter.project_name}}/{{ cookiecutter.__project_slug }}/: {{ cookiecutter.__project_slug }}.py
